<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".produitPosts"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >

        <EditText
            android:id="@+id/type"
            android:layout_width="200dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/MarquePost"
            android:layout_width="200dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/marque_du_produit"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/quant"
            android:inputType="number"
            android:layout_width="200dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/quantit"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/jour"
            android:inputType="number"
            android:layout_width="200dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/jours_restant_avant_la_peremption"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/prix"
            android:inputType="number"
            android:layout_width="200dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/prix_unitaire"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            />

        <CheckBox
            android:id="@+id/don"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poster_en_tant_que_don"
            android:layout_marginBottom="30dp"
            android:buttonTint="#41ba7a"
            />

        <Button
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="poster"
            android:textAllCaps="false"
            android:padding="15dp"
            android:background="@drawable/custom_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"/>




    </LinearLayout>

</ScrollView>