<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        >

        <CheckBox
            android:id="@+id/marchandCheck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/je_suis_un_marchand"
            android:layout_marginBottom="50dp"
            android:checked="true"
            android:buttonTint="#41ba7a"
            />

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="200dp"
            android:text="k"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:drawableStart="@drawable/custom_username_input"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp"
            android:layout_marginBottom="100dp">

        </EditText>
        <EditText
            android:id="@+id/password"
            android:text="k"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/custom_lock_icon"
            android:layout_marginBottom="50dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp"

            >

        </EditText>

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginBottom="20dp"/>
        </RelativeLayout>

        <CheckBox
            android:id="@+id/resterCo"
            android:text="@string/resterCo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:buttonTint="#41ba7a"
            android:checked="false"
            />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/custom_btn"
            >

        </Button>
        
        <Button
            android:id="@+id/singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_inscrire"
            android:layout_marginTop="15dp"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/custom_btn"
            />



    </LinearLayout>

</ScrollView>