<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <EditText
          android:id="@+id/username"
          android:inputType="text"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="80dp"
          android:layout_marginBottom="80dp"
          android:hint="@string/username"
          android:layout_width="200dp"
          android:background="@drawable/custom_edittxt"
          android:padding="10dp"
          android:textAlignment="center" />

      <EditText
          android:id="@+id/password"
          android:inputType="textPassword"
          android:hint="@string/password"
          android:textAlignment="center"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="80dp"
          android:layout_width="200dp"
          android:background="@drawable/custom_edittxt"
          android:padding="10dp" />

      <EditText
          android:id="@+id/verfierPassword"
          android:inputType="textPassword"
          android:hint="@string/checkPassword"
          android:textAlignment="center"
          android:layout_width="200dp"
          android:background="@drawable/custom_edittxt"
          android:padding="10dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="80dp"/>


      <CheckBox
          android:id="@+id/userType"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/marchandCheck"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="80dp"
          android:buttonTint="#41ba7a"/>


    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/enregistrer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        />
  </RelativeLayout>


</ScrollView>